--- a/work-experience.html
+++ b/work-experience.html
@@ -24,7 +24,7 @@
                     <div>
                         <ul>
                             <li><a href="index.html">HOME</a></li>
-                            <li><a href="work-experiences.html">WORK EXPERIENCE</a></li>
+                            <li><a href="work-experience.html">WORK EXPERIENCE</a></li>
                             <li><a href="education.html">EDUCATION</a></li>
                             <li><a href="achievements.html">ACHIEVEMENTS & SKILLS</a></li>
                             <li><a href="personalinterests.html">PERSONAL INTERESTS</a></li>
