--- a/contact.html
+++ b/contact.html
@@ -6,7 +6,6 @@
     <link rel="stylesheet" href="styling.css">
     <link rel="stylesheet" href="menu.css">
     <link rel="stylesheet" href="contact.css">
-    <link rel="stylesheet" href="contact-form.css">
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans+Condensed:wght@300&family=PT+Sans&display=swap"
         rel="stylesheet">
 </head>
@@ -40,7 +39,7 @@
     <div class="print">
 
 
-    <img class="cv" src="reduced_Page_1.jpg" alt="my CV">
+    <img class="cv" src="C:\Users\tashw\OneDrive\Documents\GitHub\tashw96.github.io\reduced_Page_1.jpg" alt="my CV">
 
     <button class="button" onclick="window.print()">Print this page</button>
 
