--- a/index.html
+++ b/index.html
@@ -44,9 +44,8 @@
         <div class="intro">
             <h2>WELCOME</h2>
             <p>I am a French and Italian graduate from the University of Sussex who is looking for a new challenge! </p>
-            <p>I am particularly interested in working for a French/International company and in the management side of
-                languages industry (translation/transcreation) however I am equally interested in any social media
-                roles. </p>
+            <p>I love languages and being able to communicate with others efficently so I am particularly interested in working for a French/International company and/or in the management side of
+                translation/transcreation. I am also interested however in any Admin/HR/PR/social media roles. </p>
             <p>Having recently completed an 'Introduction to Web Development' course, hosted by Code First: Girls, I
                 have decided to put my newly found skills to the test. </p>
             <p>Please feel free to browse my website, using the menu navigation in the top left, to find out more about
