cv and certificate image change

--- a/achievements.html
+++ b/achievements.html
@@ -39,7 +39,7 @@
         <div class="Coding">
             <h2>KNOWLEDGE OF HTML & CSS</h2>
             After submitting a successful application I was accepted onto 'Code First: Girl' 's Introduction to Web Development Course. Over 8 weeks I was given an insight into HTML and CSS (and briefly Javascript). <br> These new skills are how I have been able to create this website from scratch.<br> 
-            <img class="certificate" src="C:\Users\tashw\OneDrive\Documents\GitHub\tashw96.github.io\Certificate.jpg" alt="coding certificate">
+            <img class="certificate" src="Certificate.jpg" alt="coding certificate">
         </div>
         <div class="skills">
             <h2>SKILLS I HAVE</h2>
