--- a/contact.html
+++ b/contact.html
@@ -39,7 +39,7 @@
     <div class="print">
 
 
-    <img class="cv" src="reduced_Page_1.jpg" alt="my CV">
+    <img class="cv" src="CVCV.jpg" alt="my CV">
 
     <button class="button" onclick="window.print()">Print this page</button>
 
