footer changes and cv

--- a/work-experience.html
+++ b/work-experience.html
@@ -97,7 +97,7 @@
 
 
 
-    <footer>Website created by Natasha Wilson &#169;</footer>
+    <footer>Website created by Natasha Wilson and published on 18/06/2020 &#169;</footer>
 
 
 
