--- a/achievements.html
+++ b/achievements.html
@@ -88,7 +88,7 @@
     
 
     
-    <footer>Website created by Natasha Wilson &#169;</footer>
+    <footer>Website created by Natasha Wilson and published on 18/06/2020 &#169;</footer>
 
 
 
