--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
         </div>
     </div>
 
-    <footer>Website created by Natasha Wilson and published on 18/06/2020 &#169;</footer>
+    <footer>Copyright &#169; 2020 Natasha Wilson</footer>
 
 
 
