Move media to seperate folder Add gitignore

--- a/homepage/index.html
+++ b/homepage/index.html
@@ -3,8 +3,8 @@
 
 <head>
     <title>Natasha Wilson</title>
-    <link rel="stylesheet" href="styling.css">
-    <link rel="stylesheet" href="menu.css">
+    <link rel="stylesheet" href="../styling.css">
+    <link rel="stylesheet" href="../menu.css">
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans+Condensed:wght@300&family=PT+Sans&display=swap"
         rel="stylesheet">
 </head>
@@ -23,11 +23,11 @@
                     <div>
                         <ul>
                             <li><a href="index.html">HOME</a></li>
-                            <li><a href="work-experience.html">WORK EXPERIENCE</a></li>
-                            <li><a href="education.html">EDUCATION</a></li>
-                            <li><a href="achievements.html">ACHIEVEMENTS & SKILLS</a></li>
-                            <li><a href="personalinterests.html">PERSONAL INTERESTS</a></li>
-                            <li><a href="contact.html">CV PRINT OUT</a></li>
+                            <li><a href="../work-experience.html">WORK EXPERIENCE</a></li>
+                            <li><a href="../education.html">EDUCATION</a></li>
+                            <li><a href="../achievements.html">ACHIEVEMENTS & SKILLS</a></li>
+                            <li><a href="../personalinterests.html">PERSONAL INTERESTS</a></li>
+                            <li><a href="../contact.html">CV PRINT OUT</a></li>
                         </ul>
                     </div>
                 </div>
@@ -40,7 +40,7 @@
 
 
     <div class="info">
-        <img class="me" src="me1.jpg" alt="picture of me">
+        <img class="me" src="../media/me1.jpg" alt="picture of me">
         <div class="intro">
             <h2>WELCOME</h2>
             <p>I am a French and Italian graduate from the University of Sussex who is looking for a new challenge! </p>
