--- a/personalinterests.html
+++ b/personalinterests.html
@@ -39,10 +39,10 @@
         <div class="art">
             <h2>ART (attempts at!)</h2>
             <div class="creative">I love being creative, even if I'm not the absolute best. The past couple of months in lockdown have forced the artist in me to come out! Here are some of my creations: </div>
-            <img class="bee" src="bee.jpg">
-            <img src="hat.JPG">
-            <img src="stroud.jpg">
-            <img src="brighton.jpg">
+            <img class="bee" src="media/bee.jpg">
+            <img src="media/hat.JPG">
+            <img src="media/stroud.jpg">
+            <img src="media/brighton.jpg">
 
         </div>
 
@@ -51,11 +51,11 @@
             <div class="reading">I absolutely love reading, here are some of my favourite books:</div>
             <div class="examples">
             
-            <img src="americanah.jpg">
-            <img src="thousand.jpg">
-            <img src="etranger.jpg">
-            <img src="sgt.jpg">
-            <img src="amica.jpg">
+            <img src="media/americanah.jpg">
+            <img src="media/thousand.jpg">
+            <img src="media/etranger.jpg">
+            <img src="media/sgt.jpg">
+            <img src="media/amica.jpg">
 
 
             </div>
