Pull homepage styles into separate file Style mobile-first

--- a/homepage/index.html
+++ b/homepage/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <title>Natasha Wilson</title>
-    <link rel="stylesheet" href="../styling.css">
+    <link rel="stylesheet" href="homepage.css">
     <link rel="stylesheet" href="../menu.css">
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans+Condensed:wght@300&family=PT+Sans&display=swap"
         rel="stylesheet">
@@ -11,8 +11,8 @@
 
 <body>
 
-    <div class="titlecontainer">
-        <h2 class="title"> NATASHA WILSON </h2>
+    <div class="title-container">
+        <h2 class="title">NATASHA WILSON</h2>
         <div class="menu-wrap">
             <input type="checkbox" class="toggler">
             <div class="hamburger">
@@ -40,8 +40,10 @@
 
 
     <div class="info">
-        <img class="me" src="../media/me1.jpg" alt="picture of me">
-        <div class="intro">
+        <div class="section-1">
+            <img class="me" src="../media/me1.jpg" alt="picture of me">
+        </div>
+        <div class="section-2 intro">
             <h2>WELCOME</h2>
             <p>I am a French and Italian graduate from the University of Sussex who is looking for a new challenge! </p>
             <p>I love languages and being able to communicate with others efficently so I am particularly interested in working for a French/International company and/or in the management side of
