Add examples of responsive styles Add meta tag to index.html to make it recognise @media queries

--- a/homepage/index.html
+++ b/homepage/index.html
@@ -7,12 +7,12 @@
     <link rel="stylesheet" href="../menu.css">
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans+Condensed:wght@300&family=PT+Sans&display=swap"
         rel="stylesheet">
+    <meta content="width=device-width, initial-scale=1" name="viewport" />
 </head>
 
 <body>
 
     <div class="title-container">
-        <h2 class="title">NATASHA WILSON</h2>
         <div class="menu-wrap">
             <input type="checkbox" class="toggler">
             <div class="hamburger">
@@ -33,6 +33,7 @@
                 </div>
             </div>
         </div>
+        <h2 class="title">NATASHA WILSON</h2>
     </div>
 
 
@@ -55,7 +56,10 @@
         </div>
     </div>
 
-    <footer>Copyright &#169; 2020 Natasha Wilson</footer>
+    <footer>
+        <div class="copyright">Copyright &#169; 2020 Natasha Wilson</div>
+        <div class="last-updated">22nd June 2020</div>
+    </footer>
 
 
 
